<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/addExaminationView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/addExaminationView" />

    <EditText
        android:id="@+id/examinationInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/examinationInputName"
        android:layout_marginTop="25dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/datePickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/datePickerView"
            android:textColor="#000"
            android:textSize="20sp" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/denyButton"
            android:layout_height="60dp"
            android:layout_width="120dp"
            android:backgroundTint="#e7e7ea"
            android:text="@string/denyButton"
            android:textAllCaps="false"
            android:textColor="#747476"
            />

        <Button
            android:id="@+id/inputButton"
            android:layout_height="60dp"
            android:layout_width="120dp"
            android:layout_marginLeft="25dp"
            android:backgroundTint="#7dec73"
            android:text="@string/inputButton"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />


    </LinearLayout>
</LinearLayout>